--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   "homepage": "https://github.com/GDHub/ArnergyAuthenticationTest#readme",
   "dependencies": {
     "chai": "^4.3.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^8.4.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "rootpath": "^0.1.2"
   }
 }
