--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-jwt": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^8.4.0",
+    "mongoose": "^5.12.7",
     "request": "^2.88.2",
     "rootpath": "^0.1.2"
   }
